--- a/csdid_FE.ipynb
+++ b/csdid_FE.ipynb
@@ -22,7 +22,7 @@
         "\n",
         "First Run csdid with panel data"
       ],
-      "id": "96db14c6-c02c-4e0c-84ba-63b0d4cf2e3a"
+      "id": "fb348ad1-88bd-4b2a-9d56-40b857433dc8"
     },
     {
       "cell_type": "code",
@@ -72,7 +72,7 @@
         "set seed 1\n",
         "csdid lemp, ivar( countyreal) gvar(first) time(year)"
       ],
-      "id": "55fb3a26"
+      "id": "f18fb1af"
     },
     {
       "cell_type": "markdown",
@@ -81,7 +81,7 @@
         "Then, drop at randome 10% of the data, so technically have unbalanced\n",
         "panel. It can be estimated using repeated crossection"
       ],
-      "id": "05b71a88-f554-463c-94c8-7a075f81cee9"
+      "id": "62f2aa70-0859-4d74-b68e-31fd5aae4d85"
     },
     {
       "cell_type": "code",
@@ -99,28 +99,28 @@
             "Difference-in-difference with Multiple Time Periods\n",
             "\n",
             "                                                         Number of obs = 2,227\n",
-            "Outcome model  : regression adjustment\n",
-            "Treatment model: none\n",
+            "Outcome model  : least squares\n",
+            "Treatment model: inverse probability\n",
             "------------------------------------------------------------------------------\n",
             "             | Coefficient  Std. err.      z    P>|z|     [95% conf. interval]\n",
             "-------------+----------------------------------------------------------------\n",
             "g2004        |\n",
-            " t_2003_2004 |  -.0062926   .0225497    -0.28   0.780    -.0504892     .037904\n",
-            " t_2003_2005 |  -.0960718   .0357584    -2.69   0.007    -.1661569   -.0259866\n",
-            " t_2003_2006 |  -.1633641   .0417271    -3.92   0.000    -.2451478   -.0815804\n",
-            " t_2003_2007 |  -.1295976     .03268    -3.97   0.000    -.1936492   -.0655459\n",
+            " t_2003_2004 |  -.0106321   .0213814    -0.50   0.619     -.052539    .0312747\n",
+            " t_2003_2005 |  -.0997826   .0338647    -2.95   0.003    -.1661562   -.0334089\n",
+            " t_2003_2006 |   -.164467   .0421525    -3.90   0.000    -.2470845   -.0818495\n",
+            " t_2003_2007 |  -.1372957    .029445    -4.66   0.000    -.1950069   -.0795845\n",
             "-------------+----------------------------------------------------------------\n",
             "g2006        |\n",
-            " t_2003_2004 |  -.0056589   .0259825    -0.22   0.828    -.0565836    .0452658\n",
-            " t_2004_2005 |   .0014362   .0200922     0.07   0.943    -.0379438    .0408162\n",
-            " t_2005_2006 |   .0007738   .0189435     0.04   0.967    -.0363548    .0379024\n",
-            " t_2005_2007 |  -.0424921   .0208849    -2.03   0.042    -.0834256   -.0015585\n",
+            " t_2003_2004 |  -.0102468   .0250207    -0.41   0.682    -.0592865    .0387928\n",
+            " t_2004_2005 |  -.0012623   .0190316    -0.07   0.947    -.0385636    .0360389\n",
+            " t_2005_2006 |   .0018708   .0192118     0.10   0.922    -.0357835    .0395252\n",
+            " t_2005_2007 |  -.0439769   .0200335    -2.20   0.028    -.0832418    -.004712\n",
             "-------------+----------------------------------------------------------------\n",
             "g2007        |\n",
-            " t_2003_2004 |   .0351093   .0170156     2.06   0.039     .0017593    .0684593\n",
-            " t_2004_2005 |   .0040527   .0170957     0.24   0.813    -.0294543    .0375596\n",
-            " t_2005_2006 |  -.0326528   .0197723    -1.65   0.099    -.0714057    .0061001\n",
-            " t_2006_2007 |  -.0367615   .0166226    -2.21   0.027    -.0693412   -.0041819\n",
+            " t_2003_2004 |   .0313098    .015797     1.98   0.047     .0003482    .0622713\n",
+            " t_2004_2005 |   .0023558   .0162905     0.14   0.885    -.0295731    .0342846\n",
+            " t_2005_2006 |  -.0317725   .0198823    -1.60   0.110    -.0707412    .0071962\n",
+            " t_2006_2007 |  -.0399225   .0163005    -2.45   0.014    -.0718709   -.0079741\n",
             "------------------------------------------------------------------------------\n",
             "Control: Never Treated\n",
             "\n",
@@ -131,9 +131,9 @@
       "source": [
         "drop if runiform()<.1\n",
         "** as Panel with unbalanced Data\n",
-        "csdid lemp,  ivar( countyreal) gvar(first) time(year)"
+        "csdid lemp lpop,  ivar( countyreal) gvar(first) time(year)"
       ],
-      "id": "1ca5a348"
+      "id": "99ce4c45"
     },
     {
       "cell_type": "code",
@@ -148,29 +148,29 @@
             "Difference-in-difference with Multiple Time Periods\n",
             "\n",
             "                                                         Number of obs = 2,261\n",
-            "Outcome model  : regression adjustment\n",
-            "Treatment model: none\n",
+            "Outcome model  : least squares\n",
+            "Treatment model: inverse probability\n",
             "                           (Std. err. adjusted for 500 clusters in countyreal)\n",
             "------------------------------------------------------------------------------\n",
             "             | Coefficient  Std. err.      z    P>|z|     [95% conf. interval]\n",
             "-------------+----------------------------------------------------------------\n",
             "g2004        |\n",
-            " t_2003_2004 |  -.1173444   .1395652    -0.84   0.400    -.3908872    .1561983\n",
-            " t_2003_2005 |  -.2553488   .2439786    -1.05   0.295     -.733538    .2228404\n",
-            " t_2003_2006 |  -.3608912   .1722595    -2.10   0.036    -.6985137   -.0232687\n",
-            " t_2003_2007 |   -.305137    .112898    -2.70   0.007     -.526413    -.083861\n",
+            " t_2003_2004 |  -.0126297   .0345604    -0.37   0.715    -.0803669    .0551075\n",
+            " t_2003_2005 |  -.0913197   .0384773    -2.37   0.018    -.1667338   -.0159055\n",
+            " t_2003_2006 |  -.2070359    .049318    -4.20   0.000    -.3036974   -.1103744\n",
+            " t_2003_2007 |   -.136554   .0317776    -4.30   0.000     -.198837   -.0742711\n",
             "-------------+----------------------------------------------------------------\n",
             "g2006        |\n",
-            " t_2003_2004 |   .1768316   .0896097     1.97   0.048     .0011998    .3524635\n",
-            " t_2004_2005 |  -.0357726   .0452432    -0.79   0.429    -.1244476    .0529023\n",
-            " t_2005_2006 |  -.0432086   .0603687    -0.72   0.474     -.161529    .0751118\n",
-            " t_2005_2007 |  -.0878768   .0868235    -1.01   0.311    -.2580476    .0822941\n",
+            " t_2003_2004 |  -.0098464   .0303239    -0.32   0.745    -.0692801    .0495873\n",
+            " t_2004_2005 |  -.0381135   .0237243    -1.61   0.108    -.0846122    .0083852\n",
+            " t_2005_2006 |  -.0141839   .0318463    -0.45   0.656    -.0766015    .0482337\n",
+            " t_2005_2007 |  -.0230668   .0350484    -0.66   0.510    -.0917604    .0456267\n",
             "-------------+----------------------------------------------------------------\n",
             "g2007        |\n",
-            " t_2003_2004 |   .0827665   .0756403     1.09   0.274    -.0654857    .2310188\n",
-            " t_2004_2005 |  -.0469567   .0626924    -0.75   0.454    -.1698316    .0759182\n",
-            " t_2005_2006 |  -.1242509   .0631495    -1.97   0.049    -.2480217   -.0004801\n",
-            " t_2006_2007 |  -.0591166   .0838097    -0.71   0.481    -.2233807    .1051475\n",
+            " t_2003_2004 |   .0596817   .0309245     1.93   0.054    -.0009293    .1202926\n",
+            " t_2004_2005 |  -.0467024   .0294592    -1.59   0.113    -.1044414    .0110365\n",
+            " t_2005_2006 |  -.0388017    .034514    -1.12   0.261     -.106448    .0288445\n",
+            " t_2006_2007 |  -.0431742   .0312701    -1.38   0.167    -.1044625     .018114\n",
             "------------------------------------------------------------------------------\n",
             "Control: Never Treated\n",
             "\n",
@@ -180,9 +180,9 @@
       ],
       "source": [
         "** As RC\n",
-        "csdid lemp,  cluster( countyreal) gvar(first) time(year)"
+        "csdid lemp lpop,  cluster( countyreal) gvar(first) time(year)"
       ],
-      "id": "a9f92724"
+      "id": "831ffe59"
     },
     {
       "cell_type": "markdown",
@@ -192,7 +192,7 @@
         "\n",
         "Now using the residuals Idea:"
       ],
-      "id": "5f9a5fb9-4a8d-416e-bb78-df826dc0b886"
+      "id": "eef6ed3f-3ba8-4472-8ee4-efe658a78f4b"
     },
     {
       "cell_type": "code",
@@ -203,57 +203,84 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(dropped 1 singleton observations)\n",
-            "(MWFE estimator converged in 5 iterations)\n",
-            "\n",
-            "HDFE Linear regression                            Number of obs   =      2,260\n",
-            "Absorbing 2 HDFE groups                           F(   0,   1757) =          .\n",
-            "                                                  Prob > F        =          .\n",
-            "                                                  R-squared       =     0.9935\n",
-            "                                                  Adj R-squared   =     0.9916\n",
-            "                                                  Within R-sq.    =     0.0000\n",
-            "                                                  Root MSE        =     0.1378\n",
-            "\n",
-            "------------------------------------------------------------------------------\n",
-            "        lemp | Coefficient  Std. err.      t    P>|t|     [95% conf. interval]\n",
-            "-------------+----------------------------------------------------------------\n",
-            "       _cons |    5.78452   .0028984  1995.80   0.000     5.778835    5.790205\n",
-            "------------------------------------------------------------------------------\n",
-            "\n",
-            "Absorbed degrees of freedom:\n",
-            "-----------------------------------------------------+\n",
-            " Absorbed FE | Categories  - Redundant  = Num. Coefs |\n",
-            "-------------+---------------------------------------|\n",
-            "        year |         5           0           5     |\n",
-            "  countyreal |       499           1         498     |\n",
-            "-----------------------------------------------------+\n",
             "............\n",
             "Difference-in-difference with Multiple Time Periods\n",
             "\n",
             "                                                         Number of obs = 2,260\n",
-            "Outcome model  : regression adjustment\n",
-            "Treatment model: none\n",
+            "Outcome model  : least squares\n",
+            "Treatment model: inverse probability\n",
             "                           (Std. err. adjusted for 499 clusters in countyreal)\n",
             "------------------------------------------------------------------------------\n",
             "             | Coefficient  Std. err.      z    P>|z|     [95% conf. interval]\n",
             "-------------+----------------------------------------------------------------\n",
             "g2004        |\n",
-            " t_2003_2004 |  -.0144231   .0247539    -0.58   0.560    -.0629399    .0340936\n",
-            " t_2003_2005 |  -.0843181   .0330384    -2.55   0.011    -.1490721   -.0195641\n",
-            " t_2003_2006 |  -.1555145   .0381466    -4.08   0.000    -.2302805   -.0807484\n",
-            " t_2003_2007 |  -.1105423   .0356191    -3.10   0.002    -.1803544   -.0407302\n",
+            " t_2003_2004 |  -.0235323   .0248084    -0.95   0.343     -.072156    .0250913\n",
+            " t_2003_2005 |  -.0901505   .0312695    -2.88   0.004    -.1514376   -.0288633\n",
+            " t_2003_2006 |  -.1579142   .0380608    -4.15   0.000     -.232512   -.0833165\n",
+            " t_2003_2007 |   -.119084   .0323402    -3.68   0.000    -.1824697   -.0556984\n",
             "-------------+----------------------------------------------------------------\n",
             "g2006        |\n",
-            " t_2003_2004 |  -.0105662   .0261878    -0.40   0.687    -.0618934     .040761\n",
-            " t_2004_2005 |  -.0051092   .0202832    -0.25   0.801    -.0448636    .0346453\n",
-            " t_2005_2006 |  -.0040826   .0182119    -0.22   0.823    -.0397772     .031612\n",
-            " t_2005_2007 |  -.0347436   .0202887    -1.71   0.087    -.0745088    .0050216\n",
+            " t_2003_2004 |  -.0141947    .024901    -0.57   0.569    -.0629997    .0346104\n",
+            " t_2004_2005 |  -.0051773   .0197164    -0.26   0.793    -.0438208    .0334661\n",
+            " t_2005_2006 |    .001378   .0197077     0.07   0.944    -.0372484    .0400043\n",
+            " t_2005_2007 |  -.0374866   .0194234    -1.93   0.054    -.0755558    .0005825\n",
             "-------------+----------------------------------------------------------------\n",
             "g2007        |\n",
-            " t_2003_2004 |   .0254408   .0185718     1.37   0.171    -.0109592    .0618407\n",
-            " t_2004_2005 |  -.0038647   .0166224    -0.23   0.816     -.036444    .0287147\n",
-            " t_2005_2006 |   -.036962   .0187402    -1.97   0.049     -.073692   -.0002319\n",
-            " t_2006_2007 |   -.027827   .0166274    -1.67   0.094     -.060416     .004762\n",
+            " t_2003_2004 |   .0218685   .0177405     1.23   0.218    -.0129023    .0566393\n",
+            " t_2004_2005 |  -.0041205   .0160708    -0.26   0.798    -.0356186    .0273776\n",
+            " t_2005_2006 |  -.0344927    .019066    -1.81   0.070    -.0718613     .002876\n",
+            " t_2006_2007 |  -.0310214   .0164804    -1.88   0.060    -.0633224    .0012796\n",
+            "------------------------------------------------------------------------------\n",
+            "Control: Never Treated\n",
+            "\n",
+            "See Callaway and Sant'Anna (2021) for details"
+          ]
+        }
+      ],
+      "source": [
+        "** Getting residuals wo year\n",
+        "qui:reghdfe lemp, abs(countyreal) resid\n",
+        "** AS RC but with residuals\n",
+        "csdid _reghdfe_resid lpop, cluster( countyreal) gvar(first) time(year)"
+      ],
+      "id": "e7b71cc4"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "............\n",
+            "Difference-in-difference with Multiple Time Periods\n",
+            "\n",
+            "                                                         Number of obs = 2,260\n",
+            "Outcome model  : least squares\n",
+            "Treatment model: inverse probability\n",
+            "                           (Std. err. adjusted for 499 clusters in countyreal)\n",
+            "------------------------------------------------------------------------------\n",
+            "             | Coefficient  Std. err.      z    P>|z|     [95% conf. interval]\n",
+            "-------------+----------------------------------------------------------------\n",
+            "g2004        |\n",
+            " t_2003_2004 |   -.022436   .0249588    -0.90   0.369    -.0713544    .0264824\n",
+            " t_2003_2005 |  -.0898449   .0312509    -2.87   0.004    -.1510956   -.0285942\n",
+            " t_2003_2006 |  -.1577356   .0380741    -4.14   0.000    -.2323594   -.0831118\n",
+            " t_2003_2007 |  -.1192472   .0322187    -3.70   0.000    -.1823947   -.0560998\n",
+            "-------------+----------------------------------------------------------------\n",
+            "g2006        |\n",
+            " t_2003_2004 |  -.0139274   .0249804    -0.56   0.577    -.0628881    .0350333\n",
+            " t_2004_2005 |  -.0055821   .0197258    -0.28   0.777     -.044244    .0330798\n",
+            " t_2005_2006 |   .0011665   .0196647     0.06   0.953    -.0373756    .0397087\n",
+            " t_2005_2007 |  -.0369996   .0194188    -1.91   0.057    -.0750597    .0010606\n",
+            "-------------+----------------------------------------------------------------\n",
+            "g2007        |\n",
+            " t_2003_2004 |   .0215591   .0178184     1.21   0.226    -.0133643    .0564825\n",
+            " t_2004_2005 |  -.0041803   .0160877    -0.26   0.795    -.0357116    .0273509\n",
+            " t_2005_2006 |  -.0343154   .0190396    -1.80   0.071    -.0716322    .0030015\n",
+            " t_2006_2007 |   -.030636   .0164794    -1.86   0.063    -.0629351    .0016631\n",
             "------------------------------------------------------------------------------\n",
             "Control: Never Treated\n",
             "\n",
@@ -263,11 +290,11 @@
       ],
       "source": [
         "** Getting residuals\n",
-        "reghdfe lemp, abs( year countyreal) resid\n",
+        "qui:reghdfe lemp, abs(countyreal year) resid\n",
         "** AS RC but with residuals\n",
-        "csdid _reghdfe_resid, cluster( countyreal) gvar(first) time(year)"
+        "csdid _reghdfe_resid lpop, cluster( countyreal) gvar(first) time(year)"
       ],
-      "id": "6fea517d"
+      "id": "6c80ee81"
     },
     {
       "cell_type": "markdown",
@@ -276,7 +303,7 @@
         "I think this produces much better results! Not sure how would this\n",
         "translate in other frameworks, tho."
       ],
-      "id": "6a2263a2-e423-4d81-b73e-8e09e9fe1bac"
+      "id": "a3a09ecd-6692-4096-8162-467c044c229a"
     }
   ],
   "nbformat": 4,
